<resources>
    <string name="app_name">Learn \'em all</string>
    <string name="title_activity_add_words">Add new word</string>
    <string name="title_list_all_words_activity">All words</string>
    <string name="add_new_word">Add words</string>
    <string name="learn_words">Learn words</string>
    <string name="track_progress">Track your progress</string>
    <string name="settings">Settings</string>
    <string name="original_word_hint">Enter word you\'d like to learn</string>
    <string name="translation_word_hint">Enter translation or use \'Get translation\'</string>
    <string name="get_translation">Get translation</string>
    <string name="add_it">Add word to my vocabulary</string>
    <string name="add">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
